--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ button:hover{
     justify-content: space-between;
 }
 
-img, .card_border{
+img{
     margin: 30px 0;
     height: 314px;
     width: 226px;
@@ -82,6 +82,9 @@ img, .card_border{
 
 .card_border{
     background-color: rgb(63, 112, 53);
+    height: 320px;
+    width: 232px;
+    margin: 30px 0;
 }
 
 .btn_container, h1, .info{
