--- a/style.css
+++ b/style.css
@@ -116,3 +116,24 @@ img{
     background-color: rgb(69, 122, 58);
     padding: 20px;
 }
+
+@media only screen and (max-width: 1024px){
+    
+    .card_border{
+        height: 160px;
+        width: 115px;
+    }
+
+    img{
+        height: 160px;
+        width: 115px;
+    }
+
+    #container{
+        flex-direction: column;
+    }
+
+    #card_container{
+        margin: 0;
+    }
+}
